Fix tests, Add OCR utility for pixeled answers

--- a/package.yaml
+++ b/package.yaml
@@ -107,7 +107,7 @@ tests:
       - -threaded
     dependencies:
       - Advent
-      - htoml
+      - htoml-megaparsec
       - unordered-containers
 build-type: Custom
 custom-setup:
