--- a/test/expectedAnswers.toml
+++ b/test/expectedAnswers.toml
@@ -128,7 +128,7 @@ part2 = "242"
 
 [2016.8]
 part1 = "121"
-part2 = "\n###  #  # ###  #  #  ##  ####  ##  ####  ### #    \n#  # #  # #  # #  # #  # #    #  # #      #  #    \n#  # #  # #  # #  # #    ###  #  # ###    #  #    \n###  #  # ###  #  # #    #    #  # #      #  #    \n# #  #  # # #  #  # #  # #    #  # #      #  #    \n#  #  ##  #  #  ##   ##  ####  ##  ####  ### #### "
+part2 = "RURUCEOEIL"
 
 [2016.9]
 part1 = "110346"
@@ -196,7 +196,7 @@ part2 = "700"
 
 [2016.25]
 part1 = "182"
-part2 = "\n      ##        ##        ##    #    #  ####      \n     #  #      #  #      #  #  # #  ##     #      \n     #  #  ##  #            #  # #   #    #       \n     #### #  # #           #   # #   #    #       \n     #  # #  # #  #       #    # #   #   #        \n     #  #  ##   ##       ####   #   ###  #        "
+part2 = "AoC2017"
 
 [2017.1]
 part1 = "1216"
@@ -335,7 +335,7 @@ part1 = "425688"
 part2 = "3526561003"
 
 [2018.10]
-part1 = "\n#    #  #       ######    ##    #    #  #####    ####   ######\n#    #  #            #   #  #   #   #   #    #  #    #       #\n #  #   #            #  #    #  #  #    #    #  #            #\n #  #   #           #   #    #  # #     #    #  #           # \n  ##    #          #    #    #  ##      #####   #          #  \n  ##    #         #     ######  ##      #    #  #  ###    #   \n #  #   #        #      #    #  # #     #    #  #    #   #    \n #  #   #       #       #    #  #  #    #    #  #    #  #     \n#    #  #       #       #    #  #   #   #    #  #   ##  #     \n#    #  ######  ######  #    #  #    #  #####    ### #  ######"
+part1 = "XLZAKBGZ"
 part2 = "10656"
 
 [2018.11]
@@ -428,7 +428,7 @@ part2 = "35961106"
 
 [2019.8]
 part1 = "1820"
-part2 = "\n#### #  # #  #  ##    ## \n   # #  # # #  #  #    # \n  #  #  # ##   #       # \n #   #  # # #  #       # \n#    #  # # #  #  # #  # \n####  ##  #  #  ##   ##  "
+part2 = "ZUKCJ"
 
 [2019.9]
 part1 = "3460311188"
@@ -440,7 +440,7 @@ part2 = "512"
 
 [2019.11]
 part1 = "2064"
-part2 = "\n #    ###  #### #  # #     ##  #  # ###    \n #    #  #    # # #  #    #  # #  # #  #   \n #    #  #   #  ##   #    #    #### #  #   \n #    ###   #   # #  #    # ## #  # ###    \n #    #    #    # #  #    #  # #  # # #    \n #### #    #### #  # ####  ### #  # #  #   "
+part2 = "LPZKLGHR"
 
 [2019.12]
 part1 = "10028"
@@ -648,7 +648,7 @@ part2 = "133360"
 
 [2021.13]
 part1 = "753"
-part2 = "\n#  # #### #    #### #  #   ## ###  #  #\n#  #    # #    #    #  #    # #  # # # \n####   #  #    ###  ####    # #  # ##  \n#  #  #   #    #    #  #    # ###  # # \n#  # #    #    #    #  # #  # # #  # # \n#  # #### #### #### #  #  ##  #  # #  #"
+part2 = "HZLEHJRK"
 
 [2021.14]
 part1 = "2975"
@@ -729,3 +729,11 @@ part2 = "214171"
 [2022.8]
 part1 = "1789"
 part2 = "314820"
+
+[2022.9]
+part1 = "6087"
+part2 = "2493"
+
+[2022.10]
+part1 = "13920"
+part2 = "EGLHBLFJ"
