--- a/test/expectedAnswers.toml
+++ b/test/expectedAnswers.toml
@@ -757,3 +757,11 @@ part2 = "24166"
 [2022.15]
 part1 = "4582667"
 part2 = "10961118625406"
+
+[2022.16]
+part1 = "1580"
+part2 = "2213"
+
+[2022.17]
+part1 = "3127"
+part2 = "1542941176480"
