--- a/package.yaml
+++ b/package.yaml
@@ -31,6 +31,7 @@ dependencies:
   - aeson
   - ansi-terminal
   - base >=4.9 && <5
+  - bytestring
   - clock
   - containers
   - deepseq
@@ -65,6 +66,7 @@ library:
     - directory
     - either
     - filepath
+    - flatparse
     - foldl
     - free
     - ghc
