--- a/stack.yaml
+++ b/stack.yaml
@@ -43,6 +43,7 @@ packages:
 # (e.g., acme-missiles-0.3)
 extra-deps:
 - astar-0.3.0.0
+- flatparse-0.4.0.2
 - memoize-1.1.1
 
 # Override default flag values for local packages and extra-deps
