Add scanf module for more concise and readable parsing

--- a/package.yaml
+++ b/package.yaml
@@ -10,9 +10,11 @@ default-extensions:
   # - ImportQualifiedPost
   - LambdaCase
   - MultiWayIf
+  - QuasiQuotes
   - TemplateHaskell
   - TupleSections
   - TypeApplications
+  - TypeOperators
   - ViewPatterns
 other-extensions:
   - TemplateHaskell
